# dealflow-ai

./: .gitignore  BUILD.md  README.md
CLAUDE.md/: README.md
apps/backend/: README.md  pyproject.toml
apps/backend/src/dealflow_backend/: config.py  main.py
apps/backend/src/dealflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend/src/dealflow_backend/api/: dependencies.py  routes.py
apps/backend/src/dealflow_backend/core/: __init__.py  db.py  logging.py
apps/backend/tests/: test_health.py
apps/frontend/: README.md  package-lock.json  package.json  tsconfig.json
apps/worker/: README.md  pyproject.toml
apps/worker/src/dealflow_worker/: main.py
configs/env/: backend.env.example
configs/logging/: backend-logging.yaml
configs/settings/: application.yaml
docs/: README.md  bmad-gemini-convo
docs/architecture/: README.md
docs/architecture/v1/: FOR CLAUDE.docx.md
docs/architecture/v2/: DEALFLOW AI - THE DOCUMENT OF TRUTH FOR FUTURE BUILD TEMPLATES.md
docs/operations/: README.md
docs/product/: README.md
docs/product/project-scope/: Clarifications DealFow Ai.md
docs/ux/: README.md
infrastructure/docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  worker.Dockerfile
infrastructure/k8s/base/: namespace.yaml
infrastructure/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: bootstrap.sh  format.sh  lint.sh
services/data_ingestion/: README.md
services/data_ingestion/pipelines/: base.py
services/scoring_engine/: README.md
services/workflow_automation/: README.md
(+4 files in other folders)
