[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dealflow-backend"
version = "0.1.0"
description = "DealFlow AI FastAPI service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "coverage>=7.4",
    "mypy>=1.8",
    "ruff>=0.3"
]

[project.urls]
Repository = "https://github.com/dealflow-ai/platform"
