[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dealflow-worker"
version = "0.1.0"
description = "DealFlow AI asynchronous worker"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "redis>=5.0",
    "rq>=1.15",
    "structlog>=24.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "coverage>=7.4"
]
